--- a/app/views/subcategories/_form.html.erb
+++ b/app/views/subcategories/_form.html.erb
@@ -25,7 +25,7 @@
   </div>
   <div class="field">
     <%= f.label :category %><br />
-    <%= f.text_field :category %>
+    <%= f.collection_select :category_id, Category.find(:all, :order => :title), :id, :title, {:prompt => true} %>
   </div>
   <div class="actions">
     <%= f.submit %>
